classDiagram

%% ----- CLASSES -----
class User {
  -uuid: UUID
  -first_name: String
  -last_name: String
  -email: String
  -password_hash: String
  -is_admin: Boolean
  -created_at: DateTime
  -updated_at: DateTime
  +register()
  +updateProfile()
  +delete()
}

class Place {
  -uuid: UUID
  -title: String
  -description: String
  -price: Float
  -latitude: Float
  -longitude: Float
  -created_at: DateTime
  -updated_at: DateTime
  +create()
  +update()
  +delete()
}

class Review {
  -uuid: UUID
  -rating: Integer
  -comment: String
  -created_at: DateTime
  -updated_at: DateTime
  +submit()
  +update()
  +delete()
}

class Amenity {
  -uuid: UUID
  -name: String
  -description: String
  -created_at: DateTime
  -updated_at: DateTime
  +add()
  +update()
  +delete()
}

%% ----- RELATIONSHIPS -----
User "1" --> "0..*" Place : owns
User "1" --> "0..*" Review : writes
Place "1" --> "0..*" Review : has
Place "1" --> "0..*" Amenity : includes